<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="login_title">Login</string>
    <string name="subject">Subject Phase</string>
    <string name="subjectExp">Welcome Subject Master. Please provide a subject for the hinlers to guess.</string>
    <string name="smr1">Subject Master, please provide an image to HELP or CONFUSE the players. The power is in your hands.</string>
    <string name="main_title">Welcome to Hinkling!</string>
    <string name="enter_username">User Name</string>
    <string name="enter_password">Password</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="custome">Press the HINKALIZE button to customize your Main Page</string>
    <string name="hinkalize">Hinkalize</string>
    <string name="buttonProfile">View Profile</string>
    <string name="buttonSoloPlay">Solo Play</string>
    <string name="buttonReplay">Replay</string>
    <string name="buttonEndGameSession">End Game Session</string>
    <string name="buttonPlayFriends">Play With Friends</string>
    <string name="mainMenu">Main Menu</string>
    <string name="buttonFindGame">Find Game</string>
    <string name="buttonQuickPlay">Quick Play</string>
    <string name="buttonInvites">Invites</string>
    <string name="new_user">New Users</string>
    <string name="Loser">Loser!</string>
    <string name="Help">Help</string>
    <string name="new_game">Find Game</string>
    <string name="audio">Sound</string>
    <string name="settings">Options</string>
    <string name="profile">View Profile</string>
    <string name="help">Help</string>
    <string name="exit">EXIT :^o </string>
    <string name="app_name">HINKLING</string>
    <string name="title_activity_call_camera">Call_camera</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_game_session">GameSession</string>
    <string name="title_activity_audio">Audio</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_my_playback_service">MyPlaybackService</string>
    <string name="title_activity_round">Round</string>
    <string name="title_activity_round_one">RoundOne</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_pre_game_session">PreGameSession</string>
    <string name="title_activity_player_search">PlayerSearch</string>
    <string name="title_activity_smround_one">SMRoundOne</string>
    <string name="title_activity_loser">Loser</string>
    <string name="title_activity_end_game_session">EndGameSession</string>
    <string name="title_activity_subject">Subject</string>
    <string name="title_activity_game_one">GameOne</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="title_activity_view_profile">ViewProfile</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="done">Done</string>
    <string name="create_new_account">Create New Account</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_settings_dialog">SettingsDialog</string>
    <string name="xmppchat">Hinkling Chat</string>
    <string name="switch_account">Switch Account</string>
    <string name="announce_success">YOU HAVE JOINED</string>
    <string name="announce_fail">CONNECTION FAILED</string>
    <string name="send">Send</string>
    <string name="send_message">sendMessage</string>
    <string name="empty_string"></string>
    <string name="no_messages">No messages yet</string>
    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="inv_popup_text">You Have been invited to a game of Hinkling!</string>
    <string name="accept_popup_invite">Accept Game!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait...</string>
    <string name="dismiss">Dismiss</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="game_blurb">Got a hint? Got an inkling? Get a HINKLING! To play this game with friends, you must sign in with Google.</string>
    <string name="title_activity_smselect">SMSelect</string>
    <string name="title_activity_smgame_session">SMGameSession</string>
    <string name="title_activity_player_game_session">PlayerGameSession</string>
    <string name="title_activity_player_waiting">PlayerWaiting</string>
    <string name="title_activity_security">Security</string>
    <string name="title_activity_welcome_sm">WelcomeSM</string>
    <string name="title_activity_screen_clear_mini_game">ScreenClearMiniGame</string>
    <string name="title_activity_third_round">ThirdRound</string>
    <string name="scrambledWordTextView" />
    <string name="scrambledWordLabel">Scrambled Word</string>
    <string name="userGuessEditText" />
    <string name="userGuessLabel">Your Guess</string>
    <string name="scoreLabel">Your Score</string>
    <string name="score">0</string>
    <string name="timerLabel">Timer</string>
    <string name="timer">30</string>
    <string name="levelLabel">Word Length</string>
    <string name="levelTextView">3</string>
    <string name="title_activity_victory">Victory</string>
    <string name="title_activity_pround1">Player Round 1</string>
    <string name="title_activity_pround2">Player Round 2</string>
    <string name="title_activity_loading_screen">LoadingScreen</string>
    <string name="title_activity_smwaiting">SMWaiting</string>
    <string name="enter">Enter</string>
    <string name="inputGuess">Enter your guess:</string>
    <string name="round1">Round 1</string>
    <string name="round2">Round 2</string>
    <string name="defeat">DEFEAT</string>
    <string name="victory">VICTORY</string>
    <string name="intro_1_title">Guest Book Sample App</string>
    <string name="intro_1_dscrp">Welcome to the Mobile Backend Starter sample guestbook Android app. This simple app allows users to send messages to other instances of the app running on Android or iOS devices. Play with this application to get started.  There is no additional backend coding required.</string>
    <string name="intro_2_title">Mobile Backend Starter</string>
    <string name="intro_2_dscrp">The guestbook app uses the Mobile Backend Starter for messaging and user authentication. The backend also provides a cloud datastore, with public and private objects, and a subscription service to give your apps real time interactivity.</string>
    <string name="intro_3_title">Now it’s your turn</string>
    <string name="intro_3_dscrp">Play around with this app and the source code to become familiar with the Mobile Backend Starter. When you are ready, replace the Guestbook sample code with your own app or game code.</string>
    <string name="view_intro">View Intro</string>
    <string name="skip_intro">Skip intro next time</string>
    <string name="title_activity_reflex">Reflex</string>
    <string name="title_activity_round_two">RoundTwo</string>
    <string name="title_activity_round_three">RoundThree</string>
    <string name="title_activity_runner_jump">RunnerJump</string>
    <string name="title_activity_pround3">PRound3</string>
    <string name="title_activity_info_screen_clear">InfoScreenClear</string>
    <string name="title_activity_jump_game">JumpGame</string>
    <string name="title_activity_info_reflex">InfoReflex</string>
    <string name="title_activity_info_jumper">InfoJumper</string>
    <string name="title_activity_winner">Winner</string>

</resources>