<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hink.hinkling.ThirdRound"
    tools:ignore="MergeRootFrame" >

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/scrambledWordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:gravity="right"
            android:paddingRight="50dp"
            android:text="@string/scrambledWordLabel"
            android:textColor="@color/yellow" >
        </TextView>

        <TextView
            android:id="@+id/scrambledWordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/scrambledWordTextView"
            android:textColor="@color/yellow" >
        </TextView>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableRow0"
        android:layout_below="@+id/tableRow0"
        android:layout_marginTop="17dp" >

        <TextView
            android:id="@+id/userGuessLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/userGuessLabel"
            android:textColor="@color/yellow" />

        <EditText
            android:id="@+id/userGuessEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:layout_weight="1"
            android:inputType="text"
            android:text="@string/userGuessEditText"
            android:textColor="@color/yellow" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableRow1"
        android:layout_below="@+id/tableRow1"
        android:layout_marginTop="22dp" >

        <TextView
            android:id="@+id/levelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="5dp"
            android:text="@string/levelLabel"
            android:textColor="@color/yellow" />

        <SeekBar
            android:id="@+id/levelSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:max="4" />

        <TextView
            android:id="@+id/levelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="5dp"
            android:text="@string/levelTextView"
            android:textColor="@color/yellow" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableRow3"
        android:layout_below="@+id/tableRow3"
        android:layout_marginTop="14dp" >

        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="40dp"
            android:text="@string/scoreLabel"
            android:textColor="@color/yellow" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="40dp"
            android:text="@string/score"
            android:textColor="@color/yellow" />

        <TextView
            android:id="@+id/timerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="40dp"
            android:text="@string/timerLabel"
            android:textColor="@color/yellow" />

        <TextView
            android:id="@+id/timer"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/timer"
                        android:textColor="@color/yellow"
 />
    </TableRow>

</RelativeLayout>