<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr"
    tools:context="com.hink.hinkling.Victory"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dip"
            android:layout_marginTop="50dip"
            android:text="@string/victory"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/yellow" />

        <Button
            android:id="@+id/replayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dip"
            android:text="@string/buttonReplay"
            android:textColor="@color/yellow" />

        <Button
            android:id="@+id/backtoMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dip"
            android:text="@string/mainMenu"
            android:textColor="@color/yellow" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/exit"
            android:textColor="@color/yellow" />
    </LinearLayout>

</FrameLayout>